# Resolve

./: render.yaml
.github/workflows/: ci.yml
backend/: .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: chat.py  prompt_router.py  tenants.py
backend/app/core/: config.py  rate_limiter.py  security.py
backend/app/database/: init_db.py  model.py  session.py
backend/app/queue/: celery_app.py  tasks.py
backend/app/services/: embedding.py
frontend/: .gitignore  pyproject.toml
frontend/frontend/: frontend.py
frontend/frontend/components/: loading.py  navbar.py
frontend/frontend/pages/: admin.py  chat.py  index.py
frontend/frontend/state/: admin_state.py  base_state.py  chat_state.py
frontend/reflex.lock/: package.json
graph/: .gitignore  edges.py  main.py  nodes.py  pyproject.toml  state.py  workflow.py
monitoring/: .gitignore  docker-compose.yml  prometheus.yml
