[tool.mypy]
# Ignore missing type stubs for external libraries like Celery and pgvector
ignore_missing_imports = true
# Stop forcing us to write -> dict for every single function
disallow_untyped_defs = false
# Don't panic if it can't find the sibling 'graph' folder during CI
follow_imports = "skip"

[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography>=49.0.0",
    "fastapi>=0.138.2",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langfuse>=4.13.0",
    "langgraph>=1.2.7",
    "langgraph-checkpoint-postgres>=3.1.0",
    "mypy>=2.1.0",
    "pgvector>=0.4.2",
    "prometheus-client>=0.25.0",
    "psycopg>=3.3.4",
    "psycopg-binary>=3.3.4",
    "psycopg-pool>=3.3.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "ruff>=0.15.20",
    "sentry-sdk>=2.63.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]
